<resources>
    <string name="app_name" translatable="false">Baka Holdem</string>
    <string-array name="card_suits">
        <item>♥</item>
        <item>♦</item>
        <item>♣</item>
        <item>♠</item>
    </string-array>
    <string-array name="card_values">
        <item>A</item>
        <item>K</item>
        <item>Q</item>
        <item>J</item>
        <item>10</item>
        <item>9</item>
        <item>8</item>
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>3</item>
        <item>2</item>
    </string-array>
    <string-array name="combinations">
        <item>High card</item>
        <item>One pair</item>
        <item>Two pair</item>
        <item>Three of a kind</item>
        <item>Straight</item>
        <item>Flush</item>
        <item>Full House</item>
        <item>Four of a kind</item>
        <item>Straight Flush</item>
        <item>Royal Flush</item>
    </string-array>
    <string-array name="combinationsInfo">
        <item>evaluated by the highest card you have got</item>
        <item>combination from one pair and three random cards</item>
        <item>includes two cards of one kind plus other two cards of another kind</item>
        <item>these are three cards of the same kind and two random cards</item>
        <item>combination includes five consecutive cards off suits</item>
        <item>five suited cards no matter what kind and any sequences</item>
        <item>combination includes three of a kind plus pair</item>
        <item>combination includes four cards of the same kind</item>
        <item>five consecutive suited cards</item>
        <item>includes five suited cards from ten to ace</item>
    </string-array>
    <string-array name="combinationsExamples">
        <item>K♦ Q♦ 7♠ 4♠ 3♥</item>
        <item>10♠ 10♥ 8♠ 7♥ 4♣</item>
        <item>J♥ J♠ 3♣ 3♠ 2♥</item>
        <item>Q♣ Q♠ Q♥ 9♥ 2♠</item>
        <item>10♦ 9♠ 8♥ 7♦ 6♣</item>
        <item>J♦ 9♦ 8♦ 4♦ 3♦</item>
        <item>6♠ 6♥ 6♦ K♣ K♥</item>
        <item>5♣ 5♦ 5♥ 5♠ 2♦</item>
        <item>J♣ 10♣ 9♣ 8♣ 7♣</item>
        <item>A♦ K♦ Q♦ J♦ 10♦</item>
    </string-array>
    <string name="title">Combination</string>
    <string name="combination_descr">Combination descr</string>
    <string name="kinds" translatable="false">♥ ♠ ♦ ♣</string>
    <string name="deck_title">Deck:</string>
    <string name="hand_title">Your hand:</string>
    <string name="clear_all">Clear all</string>
    <string name="combo_title">Possible combination:</string>
    <string name="combo_name">combination name</string>
    <string name="combo_value">combination value</string>
    <string name="btn_text_rules">rules</string>
    <string name="btn_text_picker">deck builder</string>
    <string name="btn_text_coming_soon">coming soon...™</string>
</resources>