<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/rules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:text="@string/btn_text_rules" />

    <Button
        android:id="@+id/combinationPicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rules"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:text="@string/btn_text_picker" />

    <Button
        android:id="@+id/gameFlow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/combinationPicker"
        android:layout_alignParentStart="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/material_on_background_disabled"
        android:clickable="false"
        android:text="@string/btn_text_coming_soon" />
</RelativeLayout>