<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/combinationImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"/>
<!--        TODO: Remake to dynamical parsed combination-->

<!--        <TextView-->
<!--            android:id="@+id/title"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            style="@style/CombinationsTitle"-->
<!--            android:padding="8dp"-->
<!--            android:layout_alignBottom="@+id/combinationImage"-->
<!--            android:text="@string/title"/>-->

        <TextView
            android:id="@+id/itemTitle"
            style="@style/CombinationsDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginLeft="24dp"
            android:text="@string/title"/>

        <TextView
            android:id="@+id/combinationExample"
            style="@style/CombinationsExploration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/itemTitle"
            android:text="@string/kinds"
            android:textAlignment="center" />

<!--        <ScrollView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_below="@+id/itemTitle"-->
<!--            android:scrollbars="vertical">-->

            <TextView
                android:id="@+id/combinationDescription"
                style="@style/CombinationsExploration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/combinationExample"
                android:padding="8dp"
                android:text="@string/combination_descr"/>

<!--        </ScrollView>-->
    </RelativeLayout>
</androidx.cardview.widget.CardView>